--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
     "lucide-react": "^0.344.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
-    "recharts": "^2.12.2",
-    "papaparse": "^5.4.1"
+    "recharts": "^2.12.2"
   },
   "devDependencies": {
     "@types/papaparse": "^5.3.14",
