--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "nodemon server/index.js",
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev:server\"",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "node server/index.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
@@ -22,15 +24,19 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
     "@stripe/stripe-js": "^5.4.0",
-    "@supabase/supabase-js": "^2.39.7",
     "@types/react-router-dom": "^5.3.3",
     "@types/stripe-v3": "^3.1.33",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.6",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.2.3",
     "express": "^4.18.3",
     "framer-motion": "^11.15.0",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.344.0",
+    "mongoose": "^9.1.6",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
@@ -43,6 +49,7 @@
     "react-tagcloud": "^2.3.3",
     "recharts": "^2.13.3",
     "shadcn-ui": "^0.9.3",
+    "stripe": "^20.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -54,9 +61,12 @@
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.11",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
